--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -111,7 +111,7 @@ jobs:
           retention-days: 30
 
       # Package Everything as NuGet Packages
-      - name: Package NuGet Packages
+      - name: Create NuGet Packages
         shell: pwsh
         env:
           BUILD_BUILDNUMBER: ${{ env.VERSION }}
@@ -155,36 +155,74 @@ jobs:
         with:
           dotnet-version: '10.0.100'
 
-      # Login to Azure
-      - name: Login to Azure
-        uses: azure/login@v1
+
+      # Download NuGet packages from build-linux job
+      - name: Download NuGet Packages
+        uses: actions/download-artifact@v4
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          name: nuget-packages-acceptance
+          path: ./packages
 
-      # Login to Azure Container Registry
-      - name: Login to ACR
+      # Extract ChurchBulletin.UI NuGet package
+      - name: Extract UI NuGet Package
         run: |
-          az acr login --name churchbulletingithubacr
-
-      # Build and publish UI Server for Docker
-      - name: Build and Publish UI Server
-        run: |
-          # Restore dependencies
-          dotnet restore src/ChurchBulletin.sln
+          # Find the ChurchBulletin.UI package
+          PACKAGE_FILE=$(find ./packages -name "ChurchBulletin.UI.*.nupkg" | head -n 1)
           
-          # Build the solution
-          dotnet build src/ChurchBulletin.sln --configuration Release --no-restore
+          if [ -z "$PACKAGE_FILE" ]; then
+            echo "Error: ChurchBulletin.UI package not found"
+            ls -la ./packages/
+            exit 1
+          fi
           
-          # Publish UI.Server to the built directory for Docker
-          dotnet publish src/UI/Server/UI.Server.csproj \
-            --configuration Release \
-            --no-build \
-            --output ./built \
-            --self-contained false
+          echo "Found package: $PACKAGE_FILE"
           
-          # Verify published files
-          echo "Published files:"
+          # Create temporary extraction directory
+          mkdir -p ./package-extract
+          
+          # Extract the Octopus package (it's a ZIP file)
+          unzip -q "$PACKAGE_FILE" -d ./package-extract
+          
+          # Create built directory (where Dockerfile expects files)
+          mkdir -p ./built
+          
+          # Octopus packages may have files directly in root or nested
+          # Look for the DLL file to determine structure
+          DLL_PATH=$(find ./package-extract -name "ClearMeasure.Bootcamp.UI.Server.dll" | head -n 1)
+          
+          if [ -z "$DLL_PATH" ]; then
+            echo "Error: ClearMeasure.Bootcamp.UI.Server.dll not found in package"
+            echo "Package contents:"
+            find ./package-extract -type f | head -20
+            exit 1
+          fi
+          
+          # Get the directory containing the DLL
+          DLL_DIR=$(dirname "$DLL_PATH")
+          
+          # Copy all files from the DLL's directory to built
+          # This handles both flat and nested package structures
+          cp -r "$DLL_DIR"/* ./built/
+          
+          # Remove any package metadata files that might have been copied
+          find ./built -name "*.nuspec" -delete 2>/dev/null || true
+          find ./built -name "[Content_Types].xml" -delete 2>/dev/null || true
+          find ./built -name "*.psmdcp" -delete 2>/dev/null || true
+          
+          # Verify extracted files
+          echo "Extracted files in built directory:"
           ls -la built/
+          
+          # Verify we have the expected DLL
+          if [ -f ./built/ClearMeasure.Bootcamp.UI.Server.dll ]; then
+            echo "✓ Successfully extracted UI Server package"
+          else
+            echo "Error: ClearMeasure.Bootcamp.UI.Server.dll not found after extraction"
+            exit 1
+          fi
+          
+          # Clean up
+          rm -rf ./package-extract ./packages
 
       # Build Docker image
       - name: Build Docker image
@@ -192,6 +230,18 @@ jobs:
           IMAGE_TAG="${{ env.BUILD_BUILDNUMBER }}"
           docker build -f Dockerfile -t churchbulletingithubacr.azurecr.io/churchbulletin.ui:${IMAGE_TAG} .
           docker tag churchbulletingithubacr.azurecr.io/churchbulletin.ui:${IMAGE_TAG} churchbulletingithubacr.azurecr.io/churchbulletin.ui:latest
+
+      # Login to Azure
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          # TODO:  Need to create the AZURE_CREDENTIALS secret in the GitHub repository.
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # Login to Azure Container Registry
+      - name: Login to ACR
+        run: |
+          az acr login --name churchbulletingithubacr
 
       # Push Docker image to ACR
       - name: Push Docker image to ACR
