--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -181,37 +181,46 @@ jobs:
           mkdir -p ./package-extract
           
           # Extract the Octopus package (it's a ZIP file)
-          unzip -q "$PACKAGE_FILE" -d ./package-extract
+          # Use -o to overwrite without prompting
+          unzip -o "$PACKAGE_FILE" -d ./package-extract
+          
+          # Fix permissions on extracted files before copying
+          # First, ensure directories are accessible
+          find ./package-extract -type d -exec chmod u+rwx {} \;
+          # Then ensure files are readable
+          find ./package-extract -type f -exec chmod u+r {} \;
           
           # Create built directory (where Dockerfile expects files)
           mkdir -p ./built
           
           # Octopus packages may have files directly in root or nested
           # Look for the DLL file to determine structure
-          DLL_PATH=$(find ./package-extract -name "ClearMeasure.Bootcamp.UI.Server.dll" | head -n 1)
+          DLL_PATH=$(find ./package-extract -name "ClearMeasure.Bootcamp.UI.Server.dll" 2>/dev/null | head -n 1)
           
           if [ -z "$DLL_PATH" ]; then
             echo "Error: ClearMeasure.Bootcamp.UI.Server.dll not found in package"
             echo "Package contents:"
-            find ./package-extract -type f | head -20
+            find ./package-extract -type f 2>/dev/null | head -20
             exit 1
           fi
           
           # Get the directory containing the DLL
           DLL_DIR=$(dirname "$DLL_PATH")
           
-          # Copy all files from the DLL's directory to built
-          # This handles both flat and nested package structures
-          cp -r "$DLL_DIR"/* ./built/
+          # Copy all contents from the DLL's directory to built using tar
+          # tar handles permissions and file types (files/directories/symlinks) correctly
+          (cd "$DLL_DIR" && tar cf - .) | (cd ./built && tar xf -)
           
           # Remove any package metadata files that might have been copied
           find ./built -name "*.nuspec" -delete 2>/dev/null || true
           find ./built -name "[Content_Types].xml" -delete 2>/dev/null || true
           find ./built -name "*.psmdcp" -delete 2>/dev/null || true
+          find ./built -name "_rels" -type d -exec rm -rf {} + 2>/dev/null || true
+          find ./built -path "*/package/services/metadata/*" -delete 2>/dev/null || true
           
           # Verify extracted files
           echo "Extracted files in built directory:"
-          ls -la built/
+          ls -la built/ | head -20
           
           # Verify we have the expected DLL
           if [ -f ./built/ClearMeasure.Bootcamp.UI.Server.dll ]; then
@@ -251,7 +260,7 @@ jobs:
           docker push churchbulletingithubacr.azurecr.io/churchbulletin.ui:latest
           
   run-acceptance-tests:
-    name: Acceptance Tests and Package
+    name: Run Playwright Acceptance Tests
     runs-on: ubuntu-latest
     needs: [build-linux]
     if: success()
