--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build-linux:
-    name: Build and Test (Linux)
+    name: Build and Test on Linux
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -128,9 +128,79 @@ jobs:
           path: build/*.nupkg
           retention-days: 90
 
+  run-acceptance-tests:
+      name: Run Playwright Acceptance Tests
+      runs-on: ubuntu-latest
+      needs: [build-linux]
+      if: success()
+      permissions:
+        contents: read
+        packages: write
+      
+      steps:
+        # Checkout code
+        - name: Checkout code
+          uses: actions/checkout@v4
+
+        # Install .NET SDK 10.0.100
+        - name: Setup .NET SDK 10.0.100
+          uses: actions/setup-dotnet@v4
+          with:
+            dotnet-version: '10.0.100'
+
+        # Install .NET SDK 6.0 (required by Octopus CLI tool - includes runtime)
+        - name: Setup .NET SDK 6.0
+          uses: actions/setup-dotnet@v4
+          with:
+            dotnet-version: '6.0.x'
+
+        # Verify .NET 6.0 runtime is available (required by dotnet-octo tool)
+        - name: Verify .NET 6.0 runtime
+          run: |
+            echo "Installed runtimes:"
+            dotnet --list-runtimes
+            echo ""
+            echo "Checking for .NET 6.0 runtime:"
+            if dotnet --list-runtimes | grep -q "Microsoft.NETCore.App 6.0"; then
+              echo "✓ .NET 6.0 runtime is available"
+            else
+              echo "✗ .NET 6.0 runtime not found - attempting to install runtime explicitly"
+              # Try installing runtime explicitly if SDK installation didn't include it
+              curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --runtime dotnet --version 6.0.0
+              export PATH="$HOME/.dotnet:$PATH"
+              dotnet --list-runtimes
+            fi
+
+        # Set version environment variable
+        - name: Set Version
+          run: |
+            version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
+            echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
+            echo "VERSION=$version" >> $GITHUB_ENV
+            echo "Build version: $version"
+
+        # Run Acceptance Tests
+        - name: Run Acceptance Tests
+          shell: pwsh
+          env:
+            BuildConfiguration: Release
+            BUILD_BUILDNUMBER: ${{ env.VERSION }}
+          run: |
+            .\AcceptanceTests.ps1
+
+        # Upload test results
+        - name: Upload Test Results
+          uses: actions/upload-artifact@v4
+          if: always()
+          with:
+            name: test-results-acceptance
+            path: build/test/**/*.trx
+            retention-days: 30
+
+
   dockerbuildandpush:
-    name: Build and Push Docker Image
-    needs: build-linux
+    name: Get ChurchBulletin.UI Package, create and push Docker Image to ACR
+    needs: [build-linux, run-acceptance-tests]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -259,25 +329,28 @@ jobs:
           docker push churchbulletingithubacr.azurecr.io/churchbulletin.ui:${IMAGE_TAG}
           docker push churchbulletingithubacr.azurecr.io/churchbulletin.ui:latest
           
-  run-acceptance-tests:
-    name: Run Playwright Acceptance Tests
+  
+  TDD:
+    name: Deploy to TDD environment and run acceptance tests
+    needs: [dockerbuildandpush]
     runs-on: ubuntu-latest
-    needs: [build-linux]
-    if: success()
-    permissions:
-      contents: read
-      packages: write
+    environment:
+      name: TDD
     
     steps:
-      # Checkout code
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # Set version environment variable
+      - name: Set Version
+        run: |
+          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
+          echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
+          echo "VERSION=$version" >> $GITHUB_ENV
+          echo "Build version: $version"
 
-      # Install .NET SDK 10.0.100
-      - name: Setup .NET SDK 10.0.100
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '10.0.100'
+      # Set TDD environment variables
+      - name: Set TDD Environment Variables
+        run: |
+          echo "TDD_RESOURCE_GROUP=bootcamp-tdd-github-${BUILD_BUILDNUMBER}" >> $GITHUB_ENV
+          echo "TDD_APP_NAME=tdd-ui" >> $GITHUB_ENV
 
       # Install .NET SDK 6.0 (required by Octopus CLI tool - includes runtime)
       - name: Setup .NET SDK 6.0
@@ -302,6 +375,80 @@ jobs:
             dotnet --list-runtimes
           fi
 
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v1
+        with:
+          version: latest        
+
+      - name: Create release and deploy to TDD
+        uses: OctopusDeploy/create-release-action@v1
+        with:
+          api_key: ${{ secrets.OCTO_API_KEY }}
+          server: ${{ secrets.OCTOPUS_URL }}
+          space: ${{ vars.OCTOPUS_SPACE }}       
+          project: ${{ vars.OCTOPUS_PROJECT }}
+          git_ref: ${{ (github.ref_type == 'tag' && github.event.repository.default_branch ) || (github.head_ref || github.ref) }}
+          git_commit: ${{ github.event.after || github.event.pull_request.head.sha }}     
+          deploy_to: "TDD"   
+          progress: true 
+          release_number: ${{ env.BUILD_BUILDNUMBER }}
+          deployment_timeout: 00:30:00
+          package_version: ${{ env.BUILD_BUILDNUMBER }}
+          variables: |
+            ResourceGroupName:${{ env.TDD_RESOURCE_GROUP }}
+            container_app_name:${{ env.TDD_APP_NAME }}
+
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+      - name: Get Container App URL
+        run: |
+          # Configure Azure CLI to use dynamic extension installation
+          az config set extension.use_dynamic_install=yes_without_prompt
+          
+          # Get the Container App URL
+          CONTAINER_APP_URL=$(az containerapp show \
+            --resource-group ${{ env.TDD_RESOURCE_GROUP }} \
+            --name ${{ env.TDD_APP_NAME }} \
+            --query properties.configuration.ingress.fqdn \
+            --output tsv)
+          
+          # Remove quotes if present and set as environment variable
+          CONTAINER_APP_URL=$(echo "$CONTAINER_APP_URL" | tr -d '"')
+          echo "CONTAINER_APP_URL=$CONTAINER_APP_URL" >> $GITHUB_ENV
+          echo "Container App URL: $CONTAINER_APP_URL"
+
+      - name: Download Acceptance Test Package
+        run: |
+          # Add GitHub Packages NuGet source
+          nuget sources Add -Name github \
+            -Source https://nuget.pkg.github.com/${{ vars.OWNER }}/index.json \
+            -UserName ${{ vars.USERNAME }} \
+            -Password ${{ secrets.PACKAGESAPI }}
+          
+          # Install the acceptance test package
+          nuget install ChurchBulletin.AcceptanceTests \
+            -Version ${{ env.BUILD_BUILDNUMBER }} \
+            -Source "https://nuget.pkg.github.com/${{ vars.OWNER }}/index.json"
+
+      - name: Run tests
+        uses: microsoft/vstest-action@v1.0.0
+        with:
+          testAssembly: |
+            **/*AcceptanceTests.dll
+            !**/*TestAdapter.dll
+            !**/obj/**
+          searchFolder: ./ChurchBulletin.AcceptanceTests.${{ env.BUILD_BUILDNUMBER }}/
+          runInParallel: true 
+
+  Delete-TDD: 
+    name: Cleanup resources created by TDD job
+    needs: [TDD]
+    if: success() # Only run if TDD job completed successfully
+    runs-on: 'ubuntu-latest'    
+    steps:
       # Set version environment variable
       - name: Set Version
         run: |
@@ -310,20 +457,29 @@ jobs:
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "Build version: $version"
 
-      # Run Acceptance Tests
-      - name: Run Acceptance Tests
-        shell: pwsh
-        env:
-          BuildConfiguration: Release
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
+      # Set TDD environment variables (must match TDD job)
+      - name: Set TDD Environment Variables
         run: |
-          .\AcceptanceTests.ps1
+          echo "TDD_RESOURCE_GROUP=bootcamp-tdd-github-${BUILD_BUILDNUMBER}" >> $GITHUB_ENV
 
-      # Upload test results
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v4
-        if: always()
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
         with:
-          name: test-results-acceptance
-          path: build/test/**/*.trx
-          retention-days: 30
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Delete TDD resources
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.30.0
+          inlineScript: |
+            RESOURCE_GROUP="${{ env.TDD_RESOURCE_GROUP }}"
+            echo "Checking if resource group exists: $RESOURCE_GROUP"
+            
+            # Check if resource group exists before attempting to delete
+            if az group show --name "$RESOURCE_GROUP" &>/dev/null; then
+              echo "Resource group $RESOURCE_GROUP exists. Deleting..."
+              az group delete --name "$RESOURCE_GROUP" --yes --no-wait
+              echo "Resource group deletion initiated successfully"
+            else
+              echo "Resource group $RESOURCE_GROUP does not exist. Nothing to delete."
+            fi
