Fix up revision-suffix.  Set connectionstring environment variable.

--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -199,7 +199,7 @@ stages:
                     filePath: ./scripts/UpdateAzurePipelineSql.ps1
                     arguments: -DatabaseServer "$(DatabaseServer)" -DatabaseName "ChurchBulletin" -DatabaseAction "baseline" -DatabaseUser "tdd" -DatabasePassword "$(DatabasePassword)"                    
                 - task: PowerShell@2
-                  displayName: "Create database schema"
+                  displayName: "Update database schema"
                   inputs:
                     pwsh: true
                     targetType: filePath
