--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -373,6 +373,7 @@ jobs:
           project: '${{ vars.OCTOPUS_PROJECT }}'
           git_ref: ${{ (github.ref_type == 'tag' && github.event.repository.default_branch ) || (github.head_ref || github.ref) }}
           git_commit: ${{ github.event.after || github.event.pull_request.head.sha }}          
+          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
 
 
 
