--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -251,7 +251,7 @@ jobs:
       name: Run Acceptance Tests
       runs-on: ubuntu-latest
       needs: [build-linux]
-      if: false # Disabled for now
+      if: success()
       permissions:
         contents: read
         packages: write
@@ -454,7 +454,7 @@ jobs:
   deploy-to-tdd:
     name: Deploy to TDD environment and run acceptance tests
     needs: [docker-build-image-for-churchbulletin-ui]
-    # if: success() # Only run if Docker build image job completed successfully
+    if: success() # Only run if Docker build image job completed successfully
     runs-on: ubuntu-latest
     environment:
       name: TDD
